--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "mocha"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/liliwilson/siegebot.git"
@@ -19,6 +20,7 @@
   "dependencies": {
     "@slack/bolt": "^3.13.1",
     "@slack/web-api": "^6.8.1",
+    "axios": "^1.4.0",
     "dotenv": "^16.3.1"
   }
 }
